[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/LD51.png" type="Texture" id=2]
[ext_resource path="res://fira.tres" type="DynamicFont" id=3]
[ext_resource path="res://sounds/player_hit.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 17.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.890196, 0.811765, 0.705882, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[node name="Player" type="KinematicBody2D"]
collision_mask = 292
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 0, 48, 34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 3 )
shape = SubResource( 1 )

[node name="Left" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 8, 17, 8, 7 )

[node name="Right" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 8, 17, 8, 7 )

[node name="Timer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="PlayerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="N" type="Node2D" parent="."]
z_index = 10

[node name="Panel" type="Panel" parent="N"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 28.0
margin_top = -35.0
margin_right = 68.0
margin_bottom = -15.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="N/Panel"]
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.168627, 0.156863, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
